--- a/Data_Wrangling.ipynb
+++ b/Data_Wrangling.ipynb
@@ -340,6 +340,343 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "need to fix columns with names that are un descriptive and have spelling errors when cleaning."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>jobpost</th>\n",
+       "      <th>date</th>\n",
+       "      <th>Title</th>\n",
+       "      <th>Company</th>\n",
+       "      <th>AnnouncementCode</th>\n",
+       "      <th>Term</th>\n",
+       "      <th>Eligibility</th>\n",
+       "      <th>Audience</th>\n",
+       "      <th>StartDate</th>\n",
+       "      <th>Duration</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Salary</th>\n",
+       "      <th>ApplicationP</th>\n",
+       "      <th>OpeningDate</th>\n",
+       "      <th>Deadline</th>\n",
+       "      <th>Notes</th>\n",
+       "      <th>AboutC</th>\n",
+       "      <th>Attach</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Month</th>\n",
+       "      <th>IT</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>18996</th>\n",
+       "      <td>Technolinguistics NGO\\r\\n\\r\\n\\r\\nTITLE:  Senio...</td>\n",
+       "      <td>Dec 28, 2015</td>\n",
+       "      <td>Senior Creative UX/ UI Designer</td>\n",
+       "      <td>Technolinguistics NGO</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Full-time</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Long-term</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Competitive</td>\n",
+       "      <td>To apply for this position, please send your\\r...</td>\n",
+       "      <td>29 December 2015</td>\n",
+       "      <td>28 January 2016</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>As a company Technolinguistics has a mandate t...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>12</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18997</th>\n",
+       "      <td>\"Coca-Cola Hellenic Bottling Company Armenia\" ...</td>\n",
+       "      <td>Dec 30, 2015</td>\n",
+       "      <td>Category Development Manager</td>\n",
+       "      <td>\"Coca-Cola Hellenic Bottling Company Armenia\" ...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Full-time</td>\n",
+       "      <td>All interested professionals.</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>ASAP</td>\n",
+       "      <td>Long-term with a probation period of 3 months.</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>All interested candidates are kindly requested...</td>\n",
+       "      <td>30 December 2015</td>\n",
+       "      <td>20 January 2016</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>12</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18998</th>\n",
+       "      <td>\"Coca-Cola Hellenic Bottling Company Armenia\" ...</td>\n",
+       "      <td>Dec 30, 2015</td>\n",
+       "      <td>Operational Marketing Manager</td>\n",
+       "      <td>\"Coca-Cola Hellenic Bottling Company Armenia\" ...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Full-time</td>\n",
+       "      <td>All interested professionals.</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>ASAP</td>\n",
+       "      <td>Long-term with a probation period of 3 months.</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>All interested candidates are kindly requested...</td>\n",
+       "      <td>30 December 2015</td>\n",
+       "      <td>20 January 2016</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>12</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18999</th>\n",
+       "      <td>San Lazzaro   LLC\\r\\n\\r\\n\\r\\nTITLE:  Head of O...</td>\n",
+       "      <td>Dec 30, 2015</td>\n",
+       "      <td>Head of Online Sales Department</td>\n",
+       "      <td>San Lazzaro   LLC</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Long-term</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Highly competitive</td>\n",
+       "      <td>Interested candidates can send their CVs to:\\r...</td>\n",
+       "      <td>30 December 2015</td>\n",
+       "      <td>29 January 2016</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>San Lazzaro LLC works with several internation...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>12</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19000</th>\n",
+       "      <td>\"Kamurj\" UCO CJSC\\r\\n\\r\\n\\r\\nTITLE:  Lawyer in...</td>\n",
+       "      <td>Dec 30, 2015</td>\n",
+       "      <td>Lawyer in Legal Department</td>\n",
+       "      <td>\"Kamurj\" UCO CJSC</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Full-time</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Indefinite</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>All qualified applicants are encouraged to\\r\\n...</td>\n",
+       "      <td>30 December 2015</td>\n",
+       "      <td>20 January 2016</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>\"Kamurj\" UCO CJSC is providing micro and small...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>12</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 24 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                 jobpost          date  \\\n",
+       "18996  Technolinguistics NGO\\r\\n\\r\\n\\r\\nTITLE:  Senio...  Dec 28, 2015   \n",
+       "18997  \"Coca-Cola Hellenic Bottling Company Armenia\" ...  Dec 30, 2015   \n",
+       "18998  \"Coca-Cola Hellenic Bottling Company Armenia\" ...  Dec 30, 2015   \n",
+       "18999  San Lazzaro   LLC\\r\\n\\r\\n\\r\\nTITLE:  Head of O...  Dec 30, 2015   \n",
+       "19000  \"Kamurj\" UCO CJSC\\r\\n\\r\\n\\r\\nTITLE:  Lawyer in...  Dec 30, 2015   \n",
+       "\n",
+       "                                 Title  \\\n",
+       "18996  Senior Creative UX/ UI Designer   \n",
+       "18997     Category Development Manager   \n",
+       "18998    Operational Marketing Manager   \n",
+       "18999  Head of Online Sales Department   \n",
+       "19000       Lawyer in Legal Department   \n",
+       "\n",
+       "                                                 Company AnnouncementCode  \\\n",
+       "18996                              Technolinguistics NGO              NaN   \n",
+       "18997  \"Coca-Cola Hellenic Bottling Company Armenia\" ...              NaN   \n",
+       "18998  \"Coca-Cola Hellenic Bottling Company Armenia\" ...              NaN   \n",
+       "18999                                  San Lazzaro   LLC              NaN   \n",
+       "19000                                  \"Kamurj\" UCO CJSC              NaN   \n",
+       "\n",
+       "            Term                    Eligibility Audience StartDate  \\\n",
+       "18996  Full-time                            NaN      NaN       NaN   \n",
+       "18997  Full-time  All interested professionals.      NaN      ASAP   \n",
+       "18998  Full-time  All interested professionals.      NaN      ASAP   \n",
+       "18999        NaN                            NaN      NaN       NaN   \n",
+       "19000  Full-time                            NaN      NaN       NaN   \n",
+       "\n",
+       "                                             Duration  ...  \\\n",
+       "18996                                       Long-term  ...   \n",
+       "18997  Long-term with a probation period of 3 months.  ...   \n",
+       "18998  Long-term with a probation period of 3 months.  ...   \n",
+       "18999                                       Long-term  ...   \n",
+       "19000                                      Indefinite  ...   \n",
+       "\n",
+       "                   Salary                                       ApplicationP  \\\n",
+       "18996         Competitive  To apply for this position, please send your\\r...   \n",
+       "18997                 NaN  All interested candidates are kindly requested...   \n",
+       "18998                 NaN  All interested candidates are kindly requested...   \n",
+       "18999  Highly competitive  Interested candidates can send their CVs to:\\r...   \n",
+       "19000                 NaN  All qualified applicants are encouraged to\\r\\n...   \n",
+       "\n",
+       "            OpeningDate         Deadline Notes  \\\n",
+       "18996  29 December 2015  28 January 2016   NaN   \n",
+       "18997  30 December 2015  20 January 2016   NaN   \n",
+       "18998  30 December 2015  20 January 2016   NaN   \n",
+       "18999  30 December 2015  29 January 2016   NaN   \n",
+       "19000  30 December 2015  20 January 2016   NaN   \n",
+       "\n",
+       "                                                  AboutC Attach  Year Month  \\\n",
+       "18996  As a company Technolinguistics has a mandate t...    NaN  2015    12   \n",
+       "18997                                                NaN    NaN  2015    12   \n",
+       "18998                                                NaN    NaN  2015    12   \n",
+       "18999  San Lazzaro LLC works with several internation...    NaN  2015    12   \n",
+       "19000  \"Kamurj\" UCO CJSC is providing micro and small...    NaN  2015    12   \n",
+       "\n",
+       "          IT  \n",
+       "18996  False  \n",
+       "18997  False  \n",
+       "18998  False  \n",
+       "18999  False  \n",
+       "19000  False  \n",
+       "\n",
+       "[5 rows x 24 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 19001 entries, 0 to 19000\n",
+      "Data columns (total 24 columns):\n",
+      " #   Column            Non-Null Count  Dtype \n",
+      "---  ------            --------------  ----- \n",
+      " 0   jobpost           19001 non-null  object\n",
+      " 1   date              19001 non-null  object\n",
+      " 2   Title             18973 non-null  object\n",
+      " 3   Company           18994 non-null  object\n",
+      " 4   AnnouncementCode  1208 non-null   object\n",
+      " 5   Term              7676 non-null   object\n",
+      " 6   Eligibility       4930 non-null   object\n",
+      " 7   Audience          640 non-null    object\n",
+      " 8   StartDate         9675 non-null   object\n",
+      " 9   Duration          10798 non-null  object\n",
+      " 10  Location          18969 non-null  object\n",
+      " 11  JobDescription    15109 non-null  object\n",
+      " 12  JobRequirment     16479 non-null  object\n",
+      " 13  RequiredQual      18517 non-null  object\n",
+      " 14  Salary            9622 non-null   object\n",
+      " 15  ApplicationP      18941 non-null  object\n",
+      " 16  OpeningDate       18295 non-null  object\n",
+      " 17  Deadline          18936 non-null  object\n",
+      " 18  Notes             2211 non-null   object\n",
+      " 19  AboutC            12470 non-null  object\n",
+      " 20  Attach            1559 non-null   object\n",
+      " 21  Year              19001 non-null  int64 \n",
+      " 22  Month             19001 non-null  int64 \n",
+      " 23  IT                19001 non-null  bool  \n",
+      "dtypes: bool(1), int64(2), object(21)\n",
+      "memory usage: 3.4+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2012    2149\n",
+       "2015    2009\n",
+       "2013    2009\n",
+       "2014    1983\n",
+       "2008    1785\n",
+       "2011    1697\n",
+       "2007    1538\n",
+       "2010    1511\n",
+       "2009    1191\n",
+       "2005    1138\n",
+       "2006    1116\n",
+       "2004     875\n",
+       "Name: Year, dtype: int64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Year'].value_counts()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
