Commiting the .ipynb file

--- a/Data_Wrangling.ipynb
+++ b/Data_Wrangling.ipynb
@@ -1140,11 +1140,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_clean = df.rename(columns={'ApplicationP': 'ApplicationProcedure','AboutC': 'AboutCompany','RequiredQual':'RequiredQualifications', 'JobRequirment':'JobRequirement'})"
+    "df_clean = df.rename(columns={'ApplicationP': 'ApplicationProcedure','AboutC': 'AboutCompany','RequiredQual':'RequiredQualifications', 'JobRequirment':'JobRequirements'})"
    ]
   },
   {
